# wiki-recommendation

./: .gitignore  index.ipynb  pyproject.toml  report.ipynb
.github/workflows/: workflow.yml
rfc/: config.py  datastore.py  formats.py  index.py  scrap.py
rfc/index/: base.py  tfidf.py
rfc/index/backends/: base.py  spacy.py
rfc/storage/: base.py  tfidf.py
rfc/utils/: logging.py  nltk.py
